--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -3,7 +3,10 @@ FROM node:20-bullseye
 WORKDIR /app
 
 COPY ./frontend/package*.json ./
+
 RUN npm install
+
+RUN npm rebuild lightningcss --force
 
 COPY ./frontend .
 
