--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '4.0.0'
 	id 'io.spring.dependency-management' version '1.1.7'
+    id "com.qqviaja.gradle.MybatisGenerator" version "2.5"
 }
 
 group = 'com.example'
@@ -26,8 +27,28 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.mybatis.generator:mybatis-generator-core:1.4.2'
+    implementation "com.mysql:mysql-connector-j:8.2.0"
+    implementation "org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.5.0"
+    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3"
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+    useJUnitPlatform()
+}
+
+task generateMyBatis(type: Exec) {
+    group = 'mybatis'
+    description = 'Generate MyBatis classes from database'
+
+    // 必要な JAR のパス（lib フォルダに置く）
+    def mbgJar = "${projectDir}/lib/mybatis-generator-core-1.4.2.jar"
+    def mysqlJar = "${projectDir}/lib/mysql-connector-java-9.5.0.jar"
+
+    // 実行コマンド
+    commandLine 'java',
+            '-cp', "${mbgJar}:${mysqlJar}:${sourceSets.main.runtimeClasspath.asPath}",
+            'org.mybatis.generator.api.ShellRunner',
+            '-configfile', "${projectDir}/src/main/resources/generatorConfig.xml",
+            '-overwrite'
 }
