--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,10 +27,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // MyBatis
     implementation 'org.mybatis.generator:mybatis-generator-core:1.4.2'
     implementation "com.mysql:mysql-connector-j:8.2.0"
     implementation "org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.5.0"
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3"
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 tasks.named('test') {
@@ -49,6 +53,6 @@ task generateMyBatis(type: Exec) {
     commandLine 'java',
             '-cp', "${mbgJar}:${mysqlJar}:${sourceSets.main.runtimeClasspath.asPath}",
             'org.mybatis.generator.api.ShellRunner',
-            '-configfile', "${projectDir}/src/main/resources/generatorConfig.xml",
+            '-configfile', "${projectDir}/src/main/resources/generatorConfigi.xml",
             '-overwrite'
 }
