--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-    command: npm run dev --clear
+      - frontend_node_modules:/app/node_modules
+    command: npm run dev
     networks:
       - app-network
 
@@ -51,6 +51,7 @@ services:
 
 volumes:
   db_data:
+  frontend_node_modules:
 
 networks:
   app-network:
